src/css/components/_usp.scss
.section-usp {
  margin-top: 6rem;
  padding: 0 2rem;
  overflow-x: auto;
  text-align: center;
  scroll-snap-type: x mandatory;
  scroll-padding-left: 2rem;
}

.usp-wrapper {
  padding: 1rem 0 3rem;
  display: inline-flex;
  max-width: none;
  width: auto;
  text-align: left;
}

.usp {
  width: calc(800px / 3);
  overflow: hidden;
  box-shadow: 0 7px 25px 0 rgba(0, 0, 0, 0.03), 0 4px 12px 0 rgba(0, 0, 0, 0.03);
  border-radius: 0.625rem;
  scroll-snap-align: start;

  & + .usp {
    margin-left: 2rem;
  }
}

.usp-image {
  position: relative;
  width: 100%;
  background-color: color(primary, 1);

  &:after {
    content: "";
    display: block;
    padding-bottom: 70%;
  }
}

.usp-textWrapper {
  padding: 1.5rem 1.5rem 3rem;
}

.usp-title {
  @include font-weight(bold);
  @include font-size(6, mobile, true, true);
  margin-bottom: 1rem;
}

@include media(">medium") {
  .usp {
    width: calc(1200px / 3);

    & + .usp {
      margin-left: 3rem;
    }
  }

  .usp-image {
    &:after {
      padding-bottom: 70%;
    }
  }

  .usp-textWrapper {
    padding: 2rem 3rem 5rem;
  }

  .usp-title {
    @include font-size(4, desktop, true, true);
    margin-bottom: 1rem;
  }
}

